--- a/style/room.css
+++ b/style/room.css
@@ -47,6 +47,7 @@
     width: 20vmin;
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
 }
 
 .roomInfoFirstLine {
