--- a/style/menu.css
+++ b/style/menu.css
@@ -13,7 +13,7 @@
 }
 
 .bar {
-    width: 40px;
+    width: 100%;
     height: 5px;
     background: black;
     transition: ease-in-out all 300ms;
@@ -45,10 +45,8 @@
 
 .turnLeft {
     transform: rotateZ(45deg);
-    width: 40px;
 }
 
 .turnRight {
     transform: rotateZ(-45deg);
-    width: 40px;
 }
